parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> declaracoes
Rule 1     declaracoes -> declaracao
Rule 2     declaracoes -> declaracao bloco
Rule 3     bloco -> OP_PRIO_ABRE_CHAVES declaracoes OP_PRIO_FECHA_CHAVES
Rule 4     bloco -> OP_PRIO_ABRE_CHAVES declaracao bloco OP_PRIO_FECHA_CHAVES
Rule 5     bloco -> OP_PRIO_ABRE_CHAVES impressao OP_PRIO_FECHA_CHAVES
Rule 6     bloco -> OP_PRIO_ABRE_CHAVES escrita impressao OP_PRIO_FECHA_CHAVES
Rule 7     bloco -> OP_PRIO_ABRE_CHAVES escrita escrita impressao OP_PRIO_FECHA_CHAVES
Rule 8     bloco -> OP_PRIO_ABRE_CHAVES escrita escrita expr impressao OP_PRIO_FECHA_CHAVES
Rule 9     bloco -> OP_PRIO_ABRE_CHAVES impressao param_cond OP_FINAL_LINHA_PONTO_VIRGULA OP_PRIO_FECHA_CHAVES
Rule 10    bloco -> OP_PRIO_ABRE_CHAVES param_cond OP_FINAL_LINHA_PONTO_VIRGULA impressao OP_PRIO_FECHA_CHAVES
Rule 11    bloco -> OP_PRIO_ABRE_CHAVES impressao expr OP_PRIO_FECHA_CHAVES
Rule 12    declaracao -> ENQUANTO param_cond bloco
Rule 13    declaracao -> declaracao ENQUANTO param_cond bloco
Rule 14    declaracao -> PARA VARIAVEL EM RANGE OP_PRIO_ABRE_PARENTESES INTEIRO OP_EXEC_VIRGULA INTEIRO OP_PRIO_FECHA_PARENTESES bloco
Rule 15    declaracao -> PARA VARIAVEL EM RANGE OP_PRIO_ABRE_PARENTESES DOUBLE OP_EXEC_VIRGULA DOUBLE OP_PRIO_FECHA_PARENTESES bloco
Rule 16    declaracao -> VARIAVEL OP_ATRIB_IGUAL expr OP_FINAL_LINHA_PONTO_VIRGULA
Rule 17    declaracao -> VARIAVEL OP_ATRIB_IGUAL STRING OP_FINAL_LINHA_PONTO_VIRGULA
Rule 18    declaracao -> VARIAVEL OP_ATRIB_IGUAL VARIAVEL OP_FINAL_LINHA_PONTO_VIRGULA
Rule 19    declaracao -> VARIAVEL OP_ATRIB_IGUAL INTEIRO OP_FINAL_LINHA_PONTO_VIRGULA
Rule 20    declaracao -> VARIAVEL OP_ATRIB_IGUAL DOUBLE OP_FINAL_LINHA_PONTO_VIRGULA
Rule 21    declaracao -> VARIAVEL OP_ATRIB_IGUAL funcao OP_FINAL_LINHA_PONTO_VIRGULA
Rule 22    declaracao -> param VARIAVEL OP_ATRIB_IGUAL INTEIRO OP_FINAL_LINHA_PONTO_VIRGULA
Rule 23    declaracao -> VARIAVEL OP_ATRIB_MAIS_IGUAL INTEIRO
Rule 24    declaracao -> VARIAVEL OP_ATRIB_MAIS_IGUAL DOUBLE
Rule 25    declaracao -> VARIAVEL OP_ATRIB_MAIS_IGUAL VARIAVEL
Rule 26    declaracao -> SE param_cond bloco
Rule 27    declaracao -> declaracao SE param_cond bloco
Rule 28    declaracao -> declaracao SE param_cond bloco senao
Rule 29    declaracao -> SE param_cond bloco senao
Rule 30    declaracao -> funcao OP_FINAL_LINHA_PONTO_VIRGULA
Rule 31    declaracao -> impressao
Rule 32    declaracao -> escrita
Rule 33    declaracao -> funcao OP_PRIO_ABRE_CHAVES declaracoes OP_PRIO_FECHA_CHAVES
Rule 34    param_cond -> VARIAVEL OP_REL_MENOR INTEIRO
Rule 35    param_cond -> VARIAVEL OP_REL_MENOR DOUBLE
Rule 36    param_cond -> VARIAVEL OP_REL_MENOR VARIAVEL
Rule 37    param_cond -> VARIAVEL OP_REL_MAIOR INTEIRO
Rule 38    param_cond -> VARIAVEL OP_REL_MAIOR DOUBLE
Rule 39    param_cond -> VARIAVEL OP_REL_MAIOR VARIAVEL
Rule 40    param_cond -> VARIAVEL OP_ATRIB_MAIS_IGUAL INTEIRO
Rule 41    param_cond -> VARIAVEL OP_ATRIB_MAIS_IGUAL DOUBLE
Rule 42    param_cond -> VARIAVEL OP_ATRIB_MAIS_IGUAL VARIAVEL
Rule 43    param_cond -> VARIAVEL OP_REL_DUPLO_IGUAL INTEIRO
Rule 44    param_cond -> VARIAVEL OP_REL_DUPLO_IGUAL DOUBLE
Rule 45    param_cond -> VARIAVEL OP_REL_DUPLO_IGUAL VARIAVEL
Rule 46    impressao -> ESCREVA expr OP_FINAL_LINHA_PONTO_VIRGULA
Rule 47    impressao -> ESCREVA expr OP_PRIO_ABRE_PARENTESES STRING OP_EXEC_VIRGULA VARIAVEL OP_PRIO_FECHA_PARENTESES OP_FINAL_LINHA_PONTO_VIRGULA
Rule 48    impressao -> ESCREVA OP_PRIO_ABRE_PARENTESES STRING OP_PRIO_FECHA_PARENTESES OP_FINAL_LINHA_PONTO_VIRGULA
Rule 49    impressao -> ESCREVA OP_PRIO_ABRE_PARENTESES STRING OP_EXEC_VIRGULA VARIAVEL OP_PRIO_FECHA_PARENTESES OP_FINAL_LINHA_PONTO_VIRGULA
Rule 50    escrita -> VARIAVEL OP_ATRIB_IGUAL LEIA OP_PRIO_ABRE_PARENTESES expr OP_PRIO_FECHA_PARENTESES OP_FINAL_LINHA_PONTO_VIRGULA
Rule 51    escrita -> VARIAVEL OP_ATRIB_IGUAL param OP_PRIO_ABRE_PARENTESES LEIA OP_PRIO_ABRE_PARENTESES STRING OP_PRIO_FECHA_PARENTESES OP_PRIO_FECHA_PARENTESES OP_FINAL_LINHA_PONTO_VIRGULA
Rule 52    escrita -> VARIAVEL OP_ATRIB_IGUAL LEIA OP_PRIO_ABRE_PARENTESES STRING OP_PRIO_FECHA_PARENTESES OP_FINAL_LINHA_PONTO_VIRGULA
Rule 53    escrita -> VARIAVEL OP_ATRIB_IGUAL LEIA OP_PRIO_ABRE_PARENTESES STRING VARIAVEL OP_PRIO_FECHA_PARENTESES OP_FINAL_LINHA_PONTO_VIRGULA
Rule 54    expr -> VARIAVEL OP_FINAL_LINHA_PONTO_VIRGULA
Rule 55    expr -> VARIAVEL OP_ATRIB_IGUAL VARIAVEL OP_MAT_ADICAO INTEIRO OP_FINAL_LINHA_PONTO_VIRGULA
Rule 56    expr -> VARIAVEL OP_ATRIB_IGUAL VARIAVEL OP_MAT_ADICAO VARIAVEL OP_FINAL_LINHA_PONTO_VIRGULA
Rule 57    expr -> VARIAVEL OP_ATRIB_IGUAL VARIAVEL OP_MAT_SUB INTEIRO OP_FINAL_LINHA_PONTO_VIRGULA
Rule 58    expr -> VARIAVEL OP_ATRIB_IGUAL VARIAVEL OP_MAT_SUB VARIAVEL OP_FINAL_LINHA_PONTO_VIRGULA
Rule 59    expr -> VARIAVEL OP_ATRIB_IGUAL VARIAVEL OP_MAT_MULT INTEIRO OP_FINAL_LINHA_PONTO_VIRGULA
Rule 60    expr -> VARIAVEL OP_ATRIB_IGUAL VARIAVEL OP_MAT_MULT VARIAVEL OP_FINAL_LINHA_PONTO_VIRGULA
Rule 61    expr -> VARIAVEL OP_ATRIB_IGUAL VARIAVEL OP_MAT_DIV INTEIRO OP_FINAL_LINHA_PONTO_VIRGULA
Rule 62    expr -> VARIAVEL OP_ATRIB_IGUAL VARIAVEL OP_MAT_DIV VARIAVEL OP_FINAL_LINHA_PONTO_VIRGULA
Rule 63    expr -> expr OP_MAT_ADICAO expr
Rule 64    expr -> expr OP_MAT_SUB expr
Rule 65    expr -> expr OP_MAT_MULT expr
Rule 66    expr -> expr OP_MAT_DIV expr
Rule 67    param_vazio -> <empty>
Rule 68    param -> INTEIRO
Rule 69    param -> INT
Rule 70    param -> DOUBLE
Rule 71    param -> STRING
Rule 72    param -> VARIAVEL
Rule 73    funcao -> OP_PRIO_ABRE_PARENTESES param_vazio OP_PRIO_FECHA_PARENTESES
Rule 74    funcao -> OP_PRIO_ABRE_PARENTESES param OP_PRIO_FECHA_PARENTESES
Rule 75    senao -> ELSE bloco

Terminals, with rules where they appear

DOUBLE               : 15 15 20 24 35 38 41 44 70
ELSE                 : 75
EM                   : 14 15
ENQUANTO             : 12 13
ESCREVA              : 46 47 48 49
INT                  : 69
INTEIRO              : 14 14 19 22 23 34 37 40 43 55 57 59 61 68
LEIA                 : 50 51 52 53
OP_ATRIB_IGUAL       : 16 17 18 19 20 21 22 50 51 52 53 55 56 57 58 59 60 61 62
OP_ATRIB_MAIS_IGUAL  : 23 24 25 40 41 42
OP_EXEC_VIRGULA      : 14 15 47 49
OP_FINAL_LINHA_PONTO_VIRGULA : 9 10 16 17 18 19 20 21 22 30 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62
OP_MAT_ADICAO        : 55 56 63
OP_MAT_DIV           : 61 62 66
OP_MAT_MULT          : 59 60 65
OP_MAT_SUB           : 57 58 64
OP_PRIO_ABRE_CHAVES  : 3 4 5 6 7 8 9 10 11 33
OP_PRIO_ABRE_PARENTESES : 14 15 47 48 49 50 51 51 52 53 73 74
OP_PRIO_FECHA_CHAVES : 3 4 5 6 7 8 9 10 11 33
OP_PRIO_FECHA_PARENTESES : 14 15 47 48 49 50 51 51 52 53 73 74
OP_REL_DUPLO_IGUAL   : 43 44 45
OP_REL_MAIOR         : 37 38 39
OP_REL_MENOR         : 34 35 36
PARA                 : 14 15
RANGE                : 14 15
SE                   : 26 27 28 29
STRING               : 17 47 48 49 51 52 53 71
VARIAVEL             : 14 15 16 17 18 18 19 20 21 22 23 24 25 25 34 35 36 36 37 38 39 39 40 41 42 42 43 44 45 45 47 49 50 51 52 53 53 54 55 55 56 56 56 57 57 58 58 58 59 59 60 60 60 61 61 62 62 62 72
error                : 

Nonterminals, with rules where they appear

bloco                : 2 4 12 13 14 15 26 27 28 29 75
declaracao           : 1 2 4 13 27 28
declaracoes          : 3 33 0
escrita              : 6 7 7 8 8 32
expr                 : 8 11 16 46 47 50 63 63 64 64 65 65 66 66
funcao               : 21 30 33
impressao            : 5 6 7 8 9 10 11 31
param                : 22 51 74
param_cond           : 9 10 12 13 26 27 28 29
param_vazio          : 73
senao                : 28 29

Parsing method: LALR

state 0

    (0) S' -> . declaracoes
    (1) declaracoes -> . declaracao
    (2) declaracoes -> . declaracao bloco
    (12) declaracao -> . ENQUANTO param_cond bloco
    (13) declaracao -> . declaracao ENQUANTO param_cond bloco
    (14) declaracao -> . PARA VARIAVEL EM RANGE OP_PRIO_ABRE_PARENTESES INTEIRO OP_EXEC_VIRGULA INTEIRO OP_PRIO_FECHA_PARENTESES bloco
    (15) declaracao -> . PARA VARIAVEL EM RANGE OP_PRIO_ABRE_PARENTESES DOUBLE OP_EXEC_VIRGULA DOUBLE OP_PRIO_FECHA_PARENTESES bloco
    (16) declaracao -> . VARIAVEL OP_ATRIB_IGUAL expr OP_FINAL_LINHA_PONTO_VIRGULA
    (17) declaracao -> . VARIAVEL OP_ATRIB_IGUAL STRING OP_FINAL_LINHA_PONTO_VIRGULA
    (18) declaracao -> . VARIAVEL OP_ATRIB_IGUAL VARIAVEL OP_FINAL_LINHA_PONTO_VIRGULA
    (19) declaracao -> . VARIAVEL OP_ATRIB_IGUAL INTEIRO OP_FINAL_LINHA_PONTO_VIRGULA
    (20) declaracao -> . VARIAVEL OP_ATRIB_IGUAL DOUBLE OP_FINAL_LINHA_PONTO_VIRGULA
    (21) declaracao -> . VARIAVEL OP_ATRIB_IGUAL funcao OP_FINAL_LINHA_PONTO_VIRGULA
    (22) declaracao -> . param VARIAVEL OP_ATRIB_IGUAL INTEIRO OP_FINAL_LINHA_PONTO_VIRGULA
    (23) declaracao -> . VARIAVEL OP_ATRIB_MAIS_IGUAL INTEIRO
    (24) declaracao -> . VARIAVEL OP_ATRIB_MAIS_IGUAL DOUBLE
    (25) declaracao -> . VARIAVEL OP_ATRIB_MAIS_IGUAL VARIAVEL
    (26) declaracao -> . SE param_cond bloco
    (27) declaracao -> . declaracao SE param_cond bloco
    (28) declaracao -> . declaracao SE param_cond bloco senao
    (29) declaracao -> . SE param_cond bloco senao
    (30) declaracao -> . funcao OP_FINAL_LINHA_PONTO_VIRGULA
    (31) declaracao -> . impressao
    (32) declaracao -> . escrita
    (33) declaracao -> . funcao OP_PRIO_ABRE_CHAVES declaracoes OP_PRIO_FECHA_CHAVES
    (68) param -> . INTEIRO
    (69) param -> . INT
    (70) param -> . DOUBLE
    (71) param -> . STRING
    (72) param -> . VARIAVEL
    (73) funcao -> . OP_PRIO_ABRE_PARENTESES param_vazio OP_PRIO_FECHA_PARENTESES
    (74) funcao -> . OP_PRIO_ABRE_PARENTESES param OP_PRIO_FECHA_PARENTESES
    (46) impressao -> . ESCREVA expr OP_FINAL_LINHA_PONTO_VIRGULA
    (47) impressao -> . ESCREVA expr OP_PRIO_ABRE_PARENTESES STRING OP_EXEC_VIRGULA VARIAVEL OP_PRIO_FECHA_PARENTESES OP_FINAL_LINHA_PONTO_VIRGULA
    (48) impressao -> . ESCREVA OP_PRIO_ABRE_PARENTESES STRING OP_PRIO_FECHA_PARENTESES OP_FINAL_LINHA_PONTO_VIRGULA
    (49) impressao -> . ESCREVA OP_PRIO_ABRE_PARENTESES STRING OP_EXEC_VIRGULA VARIAVEL OP_PRIO_FECHA_PARENTESES OP_FINAL_LINHA_PONTO_VIRGULA
    (50) escrita -> . VARIAVEL OP_ATRIB_IGUAL LEIA OP_PRIO_ABRE_PARENTESES expr OP_PRIO_FECHA_PARENTESES OP_FINAL_LINHA_PONTO_VIRGULA
    (51) escrita -> . VARIAVEL OP_ATRIB_IGUAL param OP_PRIO_ABRE_PARENTESES LEIA OP_PRIO_ABRE_PARENTESES STRING OP_PRIO_FECHA_PARENTESES OP_PRIO_FECHA_PARENTESES OP_FINAL_LINHA_PONTO_VIRGULA
    (52) escrita -> . VARIAVEL OP_ATRIB_IGUAL LEIA OP_PRIO_ABRE_PARENTESES STRING OP_PRIO_FECHA_PARENTESES OP_FINAL_LINHA_PONTO_VIRGULA
    (53) escrita -> . VARIAVEL OP_ATRIB_IGUAL LEIA OP_PRIO_ABRE_PARENTESES STRING VARIAVEL OP_PRIO_FECHA_PARENTESES OP_FINAL_LINHA_PONTO_VIRGULA

    ENQUANTO        shift and go to state 3
    PARA            shift and go to state 4
    VARIAVEL        shift and go to state 5
    SE              shift and go to state 12
    INTEIRO         shift and go to state 7
    INT             shift and go to state 15
    DOUBLE          shift and go to state 8
    STRING          shift and go to state 9
    OP_PRIO_ABRE_PARENTESES shift and go to state 6
    ESCREVA         shift and go to state 16

    declaracoes                    shift and go to state 1
    declaracao                     shift and go to state 2
    funcao                         shift and go to state 10
    param                          shift and go to state 11
    impressao                      shift and go to state 13
    escrita                        shift and go to state 14

state 1

    (0) S' -> declaracoes .



state 2

    (1) declaracoes -> declaracao .
    (2) declaracoes -> declaracao . bloco
    (13) declaracao -> declaracao . ENQUANTO param_cond bloco
    (27) declaracao -> declaracao . SE param_cond bloco
    (28) declaracao -> declaracao . SE param_cond bloco senao
    (3) bloco -> . OP_PRIO_ABRE_CHAVES declaracoes OP_PRIO_FECHA_CHAVES
    (4) bloco -> . OP_PRIO_ABRE_CHAVES declaracao bloco OP_PRIO_FECHA_CHAVES
    (5) bloco -> . OP_PRIO_ABRE_CHAVES impressao OP_PRIO_FECHA_CHAVES
    (6) bloco -> . OP_PRIO_ABRE_CHAVES escrita impressao OP_PRIO_FECHA_CHAVES
    (7) bloco -> . OP_PRIO_ABRE_CHAVES escrita escrita impressao OP_PRIO_FECHA_CHAVES
    (8) bloco -> . OP_PRIO_ABRE_CHAVES escrita escrita expr impressao OP_PRIO_FECHA_CHAVES
    (9) bloco -> . OP_PRIO_ABRE_CHAVES impressao param_cond OP_FINAL_LINHA_PONTO_VIRGULA OP_PRIO_FECHA_CHAVES
    (10) bloco -> . OP_PRIO_ABRE_CHAVES param_cond OP_FINAL_LINHA_PONTO_VIRGULA impressao OP_PRIO_FECHA_CHAVES
    (11) bloco -> . OP_PRIO_ABRE_CHAVES impressao expr OP_PRIO_FECHA_CHAVES

    $end            reduce using rule 1 (declaracoes -> declaracao .)
    OP_PRIO_FECHA_CHAVES reduce using rule 1 (declaracoes -> declaracao .)
    ENQUANTO        shift and go to state 18
    SE              shift and go to state 19
    OP_PRIO_ABRE_CHAVES shift and go to state 20

    bloco                          shift and go to state 17

state 3

    (12) declaracao -> ENQUANTO . param_cond bloco
    (34) param_cond -> . VARIAVEL OP_REL_MENOR INTEIRO
    (35) param_cond -> . VARIAVEL OP_REL_MENOR DOUBLE
    (36) param_cond -> . VARIAVEL OP_REL_MENOR VARIAVEL
    (37) param_cond -> . VARIAVEL OP_REL_MAIOR INTEIRO
    (38) param_cond -> . VARIAVEL OP_REL_MAIOR DOUBLE
    (39) param_cond -> . VARIAVEL OP_REL_MAIOR VARIAVEL
    (40) param_cond -> . VARIAVEL OP_ATRIB_MAIS_IGUAL INTEIRO
    (41) param_cond -> . VARIAVEL OP_ATRIB_MAIS_IGUAL DOUBLE
    (42) param_cond -> . VARIAVEL OP_ATRIB_MAIS_IGUAL VARIAVEL
    (43) param_cond -> . VARIAVEL OP_REL_DUPLO_IGUAL INTEIRO
    (44) param_cond -> . VARIAVEL OP_REL_DUPLO_IGUAL DOUBLE
    (45) param_cond -> . VARIAVEL OP_REL_DUPLO_IGUAL VARIAVEL

    VARIAVEL        shift and go to state 22

    param_cond                     shift and go to state 21

state 4

    (14) declaracao -> PARA . VARIAVEL EM RANGE OP_PRIO_ABRE_PARENTESES INTEIRO OP_EXEC_VIRGULA INTEIRO OP_PRIO_FECHA_PARENTESES bloco
    (15) declaracao -> PARA . VARIAVEL EM RANGE OP_PRIO_ABRE_PARENTESES DOUBLE OP_EXEC_VIRGULA DOUBLE OP_PRIO_FECHA_PARENTESES bloco

    VARIAVEL        shift and go to state 23


state 5

    (16) declaracao -> VARIAVEL . OP_ATRIB_IGUAL expr OP_FINAL_LINHA_PONTO_VIRGULA
    (17) declaracao -> VARIAVEL . OP_ATRIB_IGUAL STRING OP_FINAL_LINHA_PONTO_VIRGULA
    (18) declaracao -> VARIAVEL . OP_ATRIB_IGUAL VARIAVEL OP_FINAL_LINHA_PONTO_VIRGULA
    (19) declaracao -> VARIAVEL . OP_ATRIB_IGUAL INTEIRO OP_FINAL_LINHA_PONTO_VIRGULA
    (20) declaracao -> VARIAVEL . OP_ATRIB_IGUAL DOUBLE OP_FINAL_LINHA_PONTO_VIRGULA
    (21) declaracao -> VARIAVEL . OP_ATRIB_IGUAL funcao OP_FINAL_LINHA_PONTO_VIRGULA
    (23) declaracao -> VARIAVEL . OP_ATRIB_MAIS_IGUAL INTEIRO
    (24) declaracao -> VARIAVEL . OP_ATRIB_MAIS_IGUAL DOUBLE
    (25) declaracao -> VARIAVEL . OP_ATRIB_MAIS_IGUAL VARIAVEL
    (72) param -> VARIAVEL .
    (50) escrita -> VARIAVEL . OP_ATRIB_IGUAL LEIA OP_PRIO_ABRE_PARENTESES expr OP_PRIO_FECHA_PARENTESES OP_FINAL_LINHA_PONTO_VIRGULA
    (51) escrita -> VARIAVEL . OP_ATRIB_IGUAL param OP_PRIO_ABRE_PARENTESES LEIA OP_PRIO_ABRE_PARENTESES STRING OP_PRIO_FECHA_PARENTESES OP_PRIO_FECHA_PARENTESES OP_FINAL_LINHA_PONTO_VIRGULA
    (52) escrita -> VARIAVEL . OP_ATRIB_IGUAL LEIA OP_PRIO_ABRE_PARENTESES STRING OP_PRIO_FECHA_PARENTESES OP_FINAL_LINHA_PONTO_VIRGULA
    (53) escrita -> VARIAVEL . OP_ATRIB_IGUAL LEIA OP_PRIO_ABRE_PARENTESES STRING VARIAVEL OP_PRIO_FECHA_PARENTESES OP_FINAL_LINHA_PONTO_VIRGULA

    OP_ATRIB_IGUAL  shift and go to state 24
    OP_ATRIB_MAIS_IGUAL shift and go to state 25
    VARIAVEL        reduce using rule 72 (param -> VARIAVEL .)


state 6

    (73) funcao -> OP_PRIO_ABRE_PARENTESES . param_vazio OP_PRIO_FECHA_PARENTESES
    (74) funcao -> OP_PRIO_ABRE_PARENTESES . param OP_PRIO_FECHA_PARENTESES
    (67) param_vazio -> .
    (68) param -> . INTEIRO
    (69) param -> . INT
    (70) param -> . DOUBLE
    (71) param -> . STRING
    (72) param -> . VARIAVEL

    OP_PRIO_FECHA_PARENTESES reduce using rule 67 (param_vazio -> .)
    INTEIRO         shift and go to state 7
    INT             shift and go to state 15
    DOUBLE          shift and go to state 8
    STRING          shift and go to state 9
    VARIAVEL        shift and go to state 28

    param_vazio                    shift and go to state 26
    param                          shift and go to state 27

state 7

    (68) param -> INTEIRO .

    VARIAVEL        reduce using rule 68 (param -> INTEIRO .)
    OP_PRIO_FECHA_PARENTESES reduce using rule 68 (param -> INTEIRO .)
    OP_PRIO_ABRE_PARENTESES reduce using rule 68 (param -> INTEIRO .)


state 8

    (70) param -> DOUBLE .

    VARIAVEL        reduce using rule 70 (param -> DOUBLE .)
    OP_PRIO_FECHA_PARENTESES reduce using rule 70 (param -> DOUBLE .)
    OP_PRIO_ABRE_PARENTESES reduce using rule 70 (param -> DOUBLE .)


state 9

    (71) param -> STRING .

    VARIAVEL        reduce using rule 71 (param -> STRING .)
    OP_PRIO_FECHA_PARENTESES reduce using rule 71 (param -> STRING .)
    OP_PRIO_ABRE_PARENTESES reduce using rule 71 (param -> STRING .)


state 10

    (30) declaracao -> funcao . OP_FINAL_LINHA_PONTO_VIRGULA
    (33) declaracao -> funcao . OP_PRIO_ABRE_CHAVES declaracoes OP_PRIO_FECHA_CHAVES

    OP_FINAL_LINHA_PONTO_VIRGULA shift and go to state 29
    OP_PRIO_ABRE_CHAVES shift and go to state 30


state 11

    (22) declaracao -> param . VARIAVEL OP_ATRIB_IGUAL INTEIRO OP_FINAL_LINHA_PONTO_VIRGULA

    VARIAVEL        shift and go to state 31


state 12

    (26) declaracao -> SE . param_cond bloco
    (29) declaracao -> SE . param_cond bloco senao
    (34) param_cond -> . VARIAVEL OP_REL_MENOR INTEIRO
    (35) param_cond -> . VARIAVEL OP_REL_MENOR DOUBLE
    (36) param_cond -> . VARIAVEL OP_REL_MENOR VARIAVEL
    (37) param_cond -> . VARIAVEL OP_REL_MAIOR INTEIRO
    (38) param_cond -> . VARIAVEL OP_REL_MAIOR DOUBLE
    (39) param_cond -> . VARIAVEL OP_REL_MAIOR VARIAVEL
    (40) param_cond -> . VARIAVEL OP_ATRIB_MAIS_IGUAL INTEIRO
    (41) param_cond -> . VARIAVEL OP_ATRIB_MAIS_IGUAL DOUBLE
    (42) param_cond -> . VARIAVEL OP_ATRIB_MAIS_IGUAL VARIAVEL
    (43) param_cond -> . VARIAVEL OP_REL_DUPLO_IGUAL INTEIRO
    (44) param_cond -> . VARIAVEL OP_REL_DUPLO_IGUAL DOUBLE
    (45) param_cond -> . VARIAVEL OP_REL_DUPLO_IGUAL VARIAVEL

    VARIAVEL        shift and go to state 22

    param_cond                     shift and go to state 32

state 13

    (31) declaracao -> impressao .

    ENQUANTO        reduce using rule 31 (declaracao -> impressao .)
    SE              reduce using rule 31 (declaracao -> impressao .)
    OP_PRIO_ABRE_CHAVES reduce using rule 31 (declaracao -> impressao .)
    $end            reduce using rule 31 (declaracao -> impressao .)
    OP_PRIO_FECHA_CHAVES reduce using rule 31 (declaracao -> impressao .)


state 14

    (32) declaracao -> escrita .

    ENQUANTO        reduce using rule 32 (declaracao -> escrita .)
    SE              reduce using rule 32 (declaracao -> escrita .)
    OP_PRIO_ABRE_CHAVES reduce using rule 32 (declaracao -> escrita .)
    $end            reduce using rule 32 (declaracao -> escrita .)
    OP_PRIO_FECHA_CHAVES reduce using rule 32 (declaracao -> escrita .)


state 15

    (69) param -> INT .

    VARIAVEL        reduce using rule 69 (param -> INT .)
    OP_PRIO_FECHA_PARENTESES reduce using rule 69 (param -> INT .)
    OP_PRIO_ABRE_PARENTESES reduce using rule 69 (param -> INT .)


state 16

    (46) impressao -> ESCREVA . expr OP_FINAL_LINHA_PONTO_VIRGULA
    (47) impressao -> ESCREVA . expr OP_PRIO_ABRE_PARENTESES STRING OP_EXEC_VIRGULA VARIAVEL OP_PRIO_FECHA_PARENTESES OP_FINAL_LINHA_PONTO_VIRGULA
    (48) impressao -> ESCREVA . OP_PRIO_ABRE_PARENTESES STRING OP_PRIO_FECHA_PARENTESES OP_FINAL_LINHA_PONTO_VIRGULA
    (49) impressao -> ESCREVA . OP_PRIO_ABRE_PARENTESES STRING OP_EXEC_VIRGULA VARIAVEL OP_PRIO_FECHA_PARENTESES OP_FINAL_LINHA_PONTO_VIRGULA
    (54) expr -> . VARIAVEL OP_FINAL_LINHA_PONTO_VIRGULA
    (55) expr -> . VARIAVEL OP_ATRIB_IGUAL VARIAVEL OP_MAT_ADICAO INTEIRO OP_FINAL_LINHA_PONTO_VIRGULA
    (56) expr -> . VARIAVEL OP_ATRIB_IGUAL VARIAVEL OP_MAT_ADICAO VARIAVEL OP_FINAL_LINHA_PONTO_VIRGULA
    (57) expr -> . VARIAVEL OP_ATRIB_IGUAL VARIAVEL OP_MAT_SUB INTEIRO OP_FINAL_LINHA_PONTO_VIRGULA
    (58) expr -> . VARIAVEL OP_ATRIB_IGUAL VARIAVEL OP_MAT_SUB VARIAVEL OP_FINAL_LINHA_PONTO_VIRGULA
    (59) expr -> . VARIAVEL OP_ATRIB_IGUAL VARIAVEL OP_MAT_MULT INTEIRO OP_FINAL_LINHA_PONTO_VIRGULA
    (60) expr -> . VARIAVEL OP_ATRIB_IGUAL VARIAVEL OP_MAT_MULT VARIAVEL OP_FINAL_LINHA_PONTO_VIRGULA
    (61) expr -> . VARIAVEL OP_ATRIB_IGUAL VARIAVEL OP_MAT_DIV INTEIRO OP_FINAL_LINHA_PONTO_VIRGULA
    (62) expr -> . VARIAVEL OP_ATRIB_IGUAL VARIAVEL OP_MAT_DIV VARIAVEL OP_FINAL_LINHA_PONTO_VIRGULA
    (63) expr -> . expr OP_MAT_ADICAO expr
    (64) expr -> . expr OP_MAT_SUB expr
    (65) expr -> . expr OP_MAT_MULT expr
    (66) expr -> . expr OP_MAT_DIV expr

    OP_PRIO_ABRE_PARENTESES shift and go to state 34
    VARIAVEL        shift and go to state 35

    expr                           shift and go to state 33

state 17

    (2) declaracoes -> declaracao bloco .

    $end            reduce using rule 2 (declaracoes -> declaracao bloco .)
    OP_PRIO_FECHA_CHAVES reduce using rule 2 (declaracoes -> declaracao bloco .)


state 18

    (13) declaracao -> declaracao ENQUANTO . param_cond bloco
    (34) param_cond -> . VARIAVEL OP_REL_MENOR INTEIRO
    (35) param_cond -> . VARIAVEL OP_REL_MENOR DOUBLE
    (36) param_cond -> . VARIAVEL OP_REL_MENOR VARIAVEL
    (37) param_cond -> . VARIAVEL OP_REL_MAIOR INTEIRO
    (38) param_cond -> . VARIAVEL OP_REL_MAIOR DOUBLE
    (39) param_cond -> . VARIAVEL OP_REL_MAIOR VARIAVEL
    (40) param_cond -> . VARIAVEL OP_ATRIB_MAIS_IGUAL INTEIRO
    (41) param_cond -> . VARIAVEL OP_ATRIB_MAIS_IGUAL DOUBLE
    (42) param_cond -> . VARIAVEL OP_ATRIB_MAIS_IGUAL VARIAVEL
    (43) param_cond -> . VARIAVEL OP_REL_DUPLO_IGUAL INTEIRO
    (44) param_cond -> . VARIAVEL OP_REL_DUPLO_IGUAL DOUBLE
    (45) param_cond -> . VARIAVEL OP_REL_DUPLO_IGUAL VARIAVEL

    VARIAVEL        shift and go to state 22

    param_cond                     shift and go to state 36

state 19

    (27) declaracao -> declaracao SE . param_cond bloco
    (28) declaracao -> declaracao SE . param_cond bloco senao
    (34) param_cond -> . VARIAVEL OP_REL_MENOR INTEIRO
    (35) param_cond -> . VARIAVEL OP_REL_MENOR DOUBLE
    (36) param_cond -> . VARIAVEL OP_REL_MENOR VARIAVEL
    (37) param_cond -> . VARIAVEL OP_REL_MAIOR INTEIRO
    (38) param_cond -> . VARIAVEL OP_REL_MAIOR DOUBLE
    (39) param_cond -> . VARIAVEL OP_REL_MAIOR VARIAVEL
    (40) param_cond -> . VARIAVEL OP_ATRIB_MAIS_IGUAL INTEIRO
    (41) param_cond -> . VARIAVEL OP_ATRIB_MAIS_IGUAL DOUBLE
    (42) param_cond -> . VARIAVEL OP_ATRIB_MAIS_IGUAL VARIAVEL
    (43) param_cond -> . VARIAVEL OP_REL_DUPLO_IGUAL INTEIRO
    (44) param_cond -> . VARIAVEL OP_REL_DUPLO_IGUAL DOUBLE
    (45) param_cond -> . VARIAVEL OP_REL_DUPLO_IGUAL VARIAVEL

    VARIAVEL        shift and go to state 22

    param_cond                     shift and go to state 37

state 20

    (3) bloco -> OP_PRIO_ABRE_CHAVES . declaracoes OP_PRIO_FECHA_CHAVES
    (4) bloco -> OP_PRIO_ABRE_CHAVES . declaracao bloco OP_PRIO_FECHA_CHAVES
    (5) bloco -> OP_PRIO_ABRE_CHAVES . impressao OP_PRIO_FECHA_CHAVES
    (6) bloco -> OP_PRIO_ABRE_CHAVES . escrita impressao OP_PRIO_FECHA_CHAVES
